# ai-engineering-gym

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  ingest.py  main.py  models.py  oidc.py  reviews.py  store.py  web.py
content/: skills.yaml
content/ai-system-design/: agentic-workflow-walkthrough.yaml  chatgpt-chatbot-walkthrough.yaml  coding-copilot-walkthrough.yaml  content-moderation-walkthrough.yaml  cost-optimization-1m-walkthrough.yaml  document-processing-walkthrough.yaml  fraud-detection-walkthrough.yaml  perplexity-search-walkthrough.yaml  rag-10m-walkthrough.yaml
content/behavioral/: ai-solution-failed.yaml  architectural-decision-multiple-teams.yaml  conflict-with-teammate.yaml  convinced-someone-change-mind.yaml  difficult-stakeholder.yaml  explain-technical-concept.yaml  lead-under-uncertainty.yaml  learn-new-technology-quickly.yaml  led-initiative.yaml  mentored-engineer.yaml  mistake-and-learning.yaml  project-unfeasible-midway.yaml  short-term-sacrifice-long-term.yaml  solved-complex-problem.yaml  technical-misjudgment-delay.yaml  think-outside-the-box.yaml  tight-deadline.yaml
content/coding/: 001-two-sum.yaml  002-add-two-numbers.yaml  003-longest-substring.yaml  004-median-of-two-sorted-arrays.yaml  005-longest-palindromic-substring.yaml  006-zigzag-conversion.yaml  007-reverse-integer.yaml  008-string-to-integer.yaml  015-3sum.yaml  (+90 more)
docs/: design.md  vision.md
infra/: cloudformation.yaml
scripts/: deploy.sh
tests/: test_ingest.py  test_oidc.py  test_review.py  test_schema.py  test_session.py
(+81 files in other folders)
