[project]
name = "ai-engineering-gym"
version = "0.1.0"
description = "Duolingo for AI-engineering interviews — backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "mangum>=0.17",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
